PagerWrap fix for pagers inside PageDescription divs.

--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -374,6 +374,9 @@ form .Button {
 .PagerWrap {
    overflow: hidden;
 }
+.PageDescription .PagerWrap {
+   overflow: visible;
+}
 .Pager {
    font-weight: bold;
    float: right;
